<resources>
    <string name="app_name">Mercury</string>
    <string name="app_author">Duc Nguyen</string>
    <string name="package_name">ng.duc.mercury</string>

    <!-- Toolbar -->
    <string name="toolbar_menu_navigation_icon">Menu icon</string>

    <string name="test_text">Slave spirituals often had hidden double meanings. On one level, spirituals referenced heaven, Jesus, and the soul, but on another level, the songs spoke about slave resistance. For example, according to Frederick Douglass, the song “O Canaan, Sweet Canaan” spoke of slaves’ longing for heaven, but it also expressed their desire to escape to the North. Careful listeners heard this second meaning in the following lyrics: “I don’t expect to stay / Much longer here. / Run to Jesus, shun the danger. / I don’t expect to stay.” When slaves sang this song, they could have been speaking of their departure from this life and their arrival in heaven; however, they also could have been describing their plans to leave the South and run, not to Jesus, but to the North. Slaves even used songs like “Steal Away to Jesus (at midnight)” to announce to other slaves the time and place of secret, forbidden meetings. What whites heard as merely spiritual songs, slaves discerned as detailed messages. The hidden meanings in spirituals allowed slaves to sing what they could not say.Imagine each paragraph as a sandwich. The real content of the sandwich—the meat or other filling—is in the middle. It includes all the evidence you need to make the point. But it gets kind of messy to eat a sandwich without any bread. Your readers don’t know what to do with all the evidence you’ve given them. So, the top slice of bread (the first sentence of the paragraph) explains the topic (or controlling idea) of the paragraph. And, the bottom slice (the last sentence of the paragraph) tells the reader how the paragraph relates to the broader argument. In the original and revised paragraphs below, notice how a topic sentence expressing the controlling idea tells the reader the point of all the evidence.Once you have mastered the use of topic sentences, you may decide that the topic sentence for a particular paragraph really shouldn’t be the first sentence of the paragraph. This is fine—the topic sentence can actually go at the beginning, middle, or end of a paragraph; what’s important is that it is in there somewhere so that readers know what the main idea of the paragraph is and how it relates back to the thesis of your paper. Suppose that we wanted to start the piranha paragraph with a transition sentence—something that reminds the reader of what happened in the previous paragraph—rather than with the topic sentence. Let’s suppose that the previous paragraph was about all kinds of animals that people are afraid of, like sharks, snakes, and spiders. Our paragraph might look like this (the topic sentence is underlined).Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.Before you can begin to determine what the composition of a particular paragraph will be, you must first decide on an argument and a working thesis statement for your paper. What is the most important idea that you are trying to convey to your reader? The information in each paragraph must be related to that idea. In other words, your paragraphs should remind your reader that there is a recurrent relationship between your thesis and the information in each paragraph. A working thesis functions like a seed from which your paper, and your ideas, will grow. The whole process is an organic one—a natural progression from a seed to a full-blown paper where there are direct, familial relationships between all of the ideas in the paper.
    </string>

    <!-- Sign in/up nudge -->
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN_UP</string>
    <string name="sign_nudge_personal">Please sign in or sign up to save your favorite businesses</string>

    <!-- Main activity -->
    <string name="personal_not_tag">All your tagged businesses will be shown here. Start by tagging your favorite restaurants or coffee shops.,, If it is still empty, please refresh this page</string>
    <string name="refresh">REFRESH</string>
    <string name="around_deal">Promotion</string>
    <string name="around_event">Events</string>
    <string name="around_empty">Oops&#8230; Seems like there isn\'t anything around&#8230;</string>

    <!-- Business activity -->
    <string name="event_going">Going</string>
    <string name="event_description">Description:</string>
    <string name="event_schedule">Schedule:</string>
    <string name="event_trans">Transportation:</string>
    <string name="event_other">Other information:</string>

    <!-- Image accessibility content description -->
    <string name="cd_user_pic">User profile picture</string>
    <string name="cd_visual_enhancement">Visual enhancement</string>
    <string name="cd_bus_pic">Business profile picture</string>

    <!-- Drawer -->
    <string name="drawer_user_account">Your account</string>
    <string name="drawer_anonymous">Anonymous</string>
    <string name="drawer_messages">Messages</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_saved">Saved places</string>
    <string name="drawer_about">About</string>
    <string name="drawer_privacy">Privacy policy</string>
    <string name="drawer_sign_out">Sign out</string>
    <string name="drawer_bus_general">Basic information</string>
    <string name="drawer_bus_product">Product information</string>
    <string name="drawer_bus_loyalty">Loyalty program</string>

</resources>
