<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright">

    <ImageView
        android:id="@+id/imageview_personal_nudge_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="340px"
        app:layout_heightPercent="50%"
        app:layout_aspectRatio="61.47%"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/meow"/>

    <TextView
        android:id="@+id/textview_personal_nudge_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_personal_nudge_sign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:maxWidth="250dp"
        android:textColor="@color/black_text"
        android:textSize="16sp"
        android:text="@string/sign_nudge_personal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_personal_nudge_sign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/sign_in"
            android:onClick="signInNudge" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up"
            android:onClick="signUpNudge" />

    </LinearLayout>


</android.support.percent.PercentRelativeLayout>